--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<p>The process of designing, creating, and occasionally letting go has taught me resilience and the importance of embracing both the successes and the setbacks.
 						</p>
 						<p class="box">
-						<a href="#vung3">
+						<a href="service.html">
 							DISCOVER NOW
 						</a>
 						</p>
@@ -112,7 +112,7 @@
 						<h1>PERSONAL DETAILS</h1>
 						<br>
 						<p>As a designer, my work is more than just creating visually compelling pieces; it's about expressing emotion, telling stories, and capturing the essence of experiences. My journey in design has been shaped by the belief that design is a form of communication—one that transcends language and resonates deeply with the heart. </p>Through every project, I seek to evoke a feeling, stir memories, or spark new perspectives, guiding the viewer through a thoughtful narrative.
-						<br><br>
+						<br><br><br>
 						<p class="box">
 						<a href="about.html">
 							VIEW FULL DETAILS
